Fixed footer on mobile.

--- a/frontend/static/style.css
+++ b/frontend/static/style.css
@@ -218,20 +218,24 @@ body {
 }
 
 .main_footer {
-    text-align: left;
     margin-top: 30px;
     padding: 15px;
-    padding-left: 200px;
     color: #9d9d9d;
     background-color: #333;
     position: absolute;
     left: 0;
-    bottom: 0;
     width: 100%;
+    text-align: center;
 
 }
 
 @media (min-width: 992px) {
+
+    .main_footer {
+        bottom: 0;
+        text-align: left;
+        padding-left: 300px;
+    }
     .shadow {
         min-height: 160px;
     }
